# panda-fm

./: CMakeLists.txt  README.md
cmake/: FindGLIB.cmake
src/: CMakeLists.txt  about.ui  application.cpp  application.h  autorundialog.cpp  bulkrename.cpp  bulkrename.h  desktop-preferences.ui  desktopentrydialog.cpp  desktoppreferencesdialog.cpp  desktopwindow.cpp  desktopwindow.h  launcher.cpp  launcher.h  main-win.ui  mainwindow.cpp  mainwindow.h  org.pcmanfm.Application.xml  pandafm.desktop  pcmanfm.cpp  preferencesdialog.cpp  settings.cpp  settings.h  tabpage.cpp  tabpage.h  view.cpp  view.h
